# curvature

./: .gitignore  Cargo.toml  README.md  pre-commit.sh
.cargo/: config.toml
curvature/: Cargo.toml  README.md
curvature-procedural-macro/: Cargo.toml
curvature-procedural-macro/src/: lib.rs
curvature/benches/: hash.rs  numbers.rs
curvature/examples/: numbers.md  numbers.rs  range.rs
curvature/src/: error.rs  lib.rs  macros.rs
curvature/src/common/: client_context.rs  mod.rs  profiler.rs  types.rs  uuid.rs
curvature/src/common/expr_operator/: arith.rs  comparison.rs  mod.rs
curvature/src/common/utils/: bytemuck.rs  hash.rs  memory.rs  mod.rs
curvature/src/exec/: README.md  expr_executor.rs  mod.rs  query_executor.rs
curvature/src/exec/expr_executor/: mod.rs
curvature/src/exec/physical_expr/: arith.rs  comparison.rs  conjunction.rs  constant.rs  executor.rs  field_ref.rs  is_null.rs  mod.rs  not.rs  regex_match.rs  utils.rs
curvature/src/exec/physical_expr/function/: mod.rs
curvature/src/exec/physical_expr/function/aggregate/: README.md  avg.rs  count.rs  min_max.rs  mod.rs  sum.rs
curvature/src/exec/physical_operator/: README.md  empty_table_scan.rs  ext_traits.rs  filter.rs  memory_table_scan.rs  mod.rs  numbers.rs  projection.rs  source_ext.rs  union.rs
curvature/src/exec/physical_operator/aggregate/: hash_aggregate.rs  mod.rs  simple_aggregate.rs
curvature/src/exec/physical_operator/aggregate/hash_aggregate/: hash_table.rs  mod.rs  partitionable_hash_table.rs  serde.rs
curvature/src/exec/physical_operator/limit/: mod.rs  streaming_limit.rs
curvature/src/exec/physical_operator/metric/: mod.rs
curvature/src/exec/physical_operator/table_scan/: empty_table_scan.rs  memory_table_scan.rs  mod.rs  numbers.rs
curvature/src/exec/physical_operator/utils/: mod.rs
curvature/src/exec/physical_operators/: mod.rs  projection.rs  utils.rs
curvature/src/exec/pipeline/: builder.rs  executor.rs  mod.rs
curvature/src/expr/: mod.rs
curvature/src/storage/: mod.rs
curvature/src/tree_node/: display.rs  mod.rs
curvature/src/visit/: display.rs  mod.rs
data-block/: Cargo.toml  README.md
data-block-benches/: Cargo.toml  README.md
data-block-benches/benches/: arith.rs  comparison.rs  dyn_auto_vectorization.rs  filter.rs  logical.rs  mutate_bitmap.rs  selection.rs
data-block-benches/src/: bitmap.rs  lib.rs  macros.rs
data-block-benches/src/comparison/: mod.rs  portable_simd.rs
data-block/benches/: aligned_vec.rs  selection.rs
data-block/src/: bitmap.rs  block.rs  lib.rs  macros.rs  types.rs
data-block/src/aligned_vec/: alignment.rs  mod.rs
data-block/src/array/: binary.rs  boolean.rs  constant.rs  iter.rs  list.rs  mod.rs  ping_pong.rs  primitive.rs  string.rs  swar.rs  utils.rs
data-block/src/bitmap/: iterator.rs  mod.rs
data-block/src/compute/: arith.rs  filter.rs  logical.rs  mod.rs  null.rs  regex_match.rs  sequence.rs
data-block/src/compute/arith/: mod.rs
data-block/src/compute/arith/interval/: mod.rs
data-block/src/compute/arith/intrinsic/: add.rs  div.rs  mod.rs  mul.rs  rem.rs  sub.rs
data-block/src/compute/comparison/: binary.rs  boolean.rs  mod.rs  string.rs
data-block/src/compute/comparison/primitive/: mod.rs
data-block/src/compute/comparison/primitive/intrinsic/: mod.rs
data-block/src/compute/comparison/primitive/intrinsic/portable_simd/: mod.rs
data-block/src/compute/comparison/primitive/intrinsic/stable/: mod.rs
data-block/src/compute/comparison/primitive/intrinsic/stable/arm/: mod.rs
data-block/src/compute/comparison/primitive/intrinsic/stable/x86/: avx2.rs  mod.rs  v2.rs
data-block/src/compute/comparison/primitive/portable_simd/: mod.rs
data-block/src/compute/comparison/primitive/stable/: mod.rs
data-block/src/compute/comparison/primitive/stable/arm/: mod.rs
data-block/src/compute/comparison/primitive/stable/x86/: avx2.rs  mod.rs  sse2.rs
data-block/src/element/: interval.rs  list.rs  mod.rs  string.rs
data-block/src/scalar/: interval.rs  list.rs  mod.rs  string.rs
data-block/src/utils/: mod.rs
docs/: style.md
