[workspace]

members = ["curvature", "data-block", "data-block-benches"]
default-members = ["curvature", "data-block"]

resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Yjy"]
keywords = ["query-engine", "arrow"]

[workspace.dependencies]
snafu = "0.8"
paste = "1.0.14"
libc = "0.2"
regex = "1.10"
either = "1.10"
quanta = "0.12"
uuid = "1.7"
rayon = "1.9"
tracing = "0.1"
strength_reduce = "0.2"
num-traits = "0.2"
parking_lot = "0.12"
bumpalo = "3.15"
# TBD: Should we specify the ahash to "=version"? Otherwise, different binaries compiled
# in different time will create different hash value. The distributed engine will have bug
ahash = "0.8"
hashbrown = { version = "0.14" }
tabled = "0.15"
tracing-subscriber = "0.3.18"
data-block = { path = "data-block" }

[profile.release]
lto = true
