[workspace]

members = [
    "curvature",
    "curvature-procedural-macro",
    "data-block",
    "data-block-benches",
]
default-members = ["curvature", "data-block", "curvature-procedural-macro"]

resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Yjy"]

[workspace.dependencies]
snafu = "0.8"
paste = "1.0.14"
libc = "0.2"
regex = "1.10"
quanta = "0.12"
uuid = "1.8"
rayon = "1.10"
tracing = "0.1"
strength_reduce = "0.2"
num-traits = "0.2"
parking_lot = "0.12"
bumpalo = "3.15"
# TBD: Should we specify the ahash to "=version"? Otherwise, different binaries compiled
# in different time will create different hash value. The distributed engine will have bug
ahash = "0.8"
hashbrown = { version = "0.14" }
tabled = "0.15"
tracing-subscriber = "0.3.18"
data-block = { path = "data-block" }
curvature-procedural-macro = { path = "curvature-procedural-macro" }
crossbeam-utils = "0.8"

# Either is used in ping-pong
# either = "1.10"
[profile.release]
lto = true
opt-level = 3
codegen-units = 1
