[workspace]

members = [
    "curvature",
    "curvature-procedural-macro",
    "data-block",
    "data-block-benches",
]
default-members = ["curvature", "data-block", "curvature-procedural-macro"]

resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Yjy"]

[workspace.dependencies]
snafu = "0.8"
paste = "1.0.15"
libc = "0.2"
regex = "1.10"
quanta = "0.12"
uuid = "1.9"
rayon = "1.10"
tracing = "0.1"
strength_reduce = "0.2"
num-traits = "0.2"
parking_lot = "0.12"
bumpalo = "3.16"
# TBD: Should we specify the ahash to "=version"? Otherwise, different binaries compiled
# in different time will create different hash value. The distributed engine will have bug
ahash = "0.8"
hashbrown = { version = "0.14" }
tabled = "0.15"
tracing-subscriber = "0.3.18"
data-block = { path = "data-block" }
curvature-procedural-macro = { path = "curvature-procedural-macro" }
crossbeam-utils = "0.8"


[profile.release]
lto = "fat"
opt-level = 3
debug = true
codegen-units = 1

[profile.bench]
debug = true

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"
bare_urls = "deny"
private_intra_doc_links = "deny"

[workspace.lints.rust]
missing_docs = "deny"
missing_debug_implementations = "deny"
single_use_lifetimes = "warn"
unreachable_pub = "warn"

[workspace.lints.clippy]
todo = "warn"
needless_borrow = "deny"
redundant_clone = "deny"
