[package]
name = "curvature"
version.workspace = true
edition.workspace = true
authors.workspace = true
keywords.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
data-block = { path = "../data-block" }
bumpalo = "3.14"
ahash = "0.8.7"
hashbrown = { version = "0.14", default-features = false, features = [
    "inline-more",
    "raw",
] }
snafu = { workspace = true }
quanta = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
strength_reduce = { workspace = true }
num-traits = { workspace = true }

# TODO: Remove the rayon, use monoio instead?
rayon = { workspace = true }


[dev-dependencies]
expect-test = "1.4.1"

[features]
default = []
profile = []
# Feature for arithmetic if overflow happens. If `saturating` is enabled, aggregations
# will saturate if overflow happens. Otherwise, we do not check overflow
saturating = []
