[package]
name = "curvature"
version.workspace = true
edition.workspace = true
authors.workspace = true
keywords.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
data-block = { path = "../data-block" }
bumpalo = { workspace = true }
ahash = { workspace = true }
hashbrown = { workspace = true, features = ["inline-more", "raw"] }
snafu = { workspace = true }
quanta = { workspace = true }
uuid = { workspace = true }
strength_reduce = { workspace = true }
libc = { workspace = true }
num-traits = { workspace = true }
parking_lot = { workspace = true }
# TODO: Remove the rayon, use monoio instead?
rayon = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }


[dev-dependencies]
expect-test = "1.4"
criterion = "0.5"
rand = { version = "0.8.5", features = ["std_rng"] }

[features]
default = []
profile = []

[[bench]]
name = "numbers"
harness = false

[[bench]]
name = "hash"
harness = false
