[package]
name = "curvature"
version.workspace = true
edition.workspace = true
authors.workspace = true
keywords = ["query engine"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
data-block = { workspace = true }
curvature-procedural-macro = { workspace = true }
bumpalo = { workspace = true }
ahash = { workspace = true }
hashbrown = { workspace = true, features = ["inline-more", "raw"] }
snafu = { workspace = true }
quanta = { workspace = true }
uuid = { workspace = true }
strength_reduce = { workspace = true }
libc = { workspace = true }
num-traits = { workspace = true }
parking_lot = { workspace = true }
tracing = { workspace = true, features = ["log"] }
crossbeam-utils = { workspace = true }
regex = { workspace = true }

# TODO: Remove the rayon, use monoio instead?
rayon = { workspace = true }

[dev-dependencies]
expect-test = "1.5"
criterion = "0.5"
rand = { version = "0.8.5", features = ["std_rng"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
ctrlc = "3.4.4"

[target.'cfg(not(target_env = "msvc"))'.dev-dependencies]
tikv-jemallocator = "0.5"

[features]
default = []
likely = []
nightly = ["hashbrown/nightly", "likely"]
portable_simd = ["data-block/portable_simd"]
# Check overflow in arithmetic
overflow_checks = []

[lints]
workspace = true

[[bench]]
name = "numbers"
harness = false
