[package]
name = "data-block-benches"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
data-block = { path = "../data-block" }
rand = { version = "0.8.5", features = ["std_rng"] }
bitvec = "1.0"
paste = { workspace = true }

[dev-dependencies]
criterion = "0.5"
pprof = { version = "0.13.0", features = ["criterion", "flamegraph"] }
# UNMAINTAINED
arrow2 = { version = "0.18", features = ["benchmarks", "compute"] }
arrow = { version = "51.0", features = ["test_utils"] }
libc = { workspace = true }
num-traits = { workspace = true }

[features]
portable_simd = ["data-block/portable_simd"]
# enable target feature avx512
avx512 = []
arrow2_simd = ["arrow2/simd"]

[[bench]]
name = "comparison"
harness = false

[[bench]]
name = "selection"
harness = false

[[bench]]
name = "dyn_auto_vectorization"
harness = false

[[bench]]
name = "arith"
harness = false

[[bench]]
name = "logical"
harness = false

[[bench]]
name = "mutate_bitmap"
harness = false

[[bench]]
name = "filter"
harness = false
