[package]
name = "data-block"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
keywords = ["arrow"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strength_reduce = { workspace = true }
regex = { workspace = true }
paste = { workspace = true }
libc = { workspace = true }
snafu = { workspace = true }
tabled = { workspace = true, features = ["std"] }
# Either is used in ping-pong
# either = { workspace = true }

[dev-dependencies]
num-traits = { workspace = true }
criterion = "0.5"
expect-test = "1.4"

[features]
# Use portable simd to perform comparison. LLVM is smart, you can always use the simd
# type that is 512 bits no matter what target_feature is used. LLVM will choose the 
# best instruction for you based on the target feature
portable_simd = []

[[bench]]
name = "aligned_vec"
harness = false
